// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic mushroom: idle 1`] = `
"<timer-bar-card hass="[object Object]">
  <timer-bar-mushroom-row config="[object Object]" hass="[object Object]" mushroom="true">
    <ha-card raised="false">
      <slot></slot>
      <mushroom-card appearance="[object Object]">
        <div class="container">
          <slot></slot>
        </div>
        <mushroom-state-item appearance="[object Object]">
          <div class="container">
            <div class="icon">
              <slot name="icon"></slot>
              <slot name="badge"></slot>
            </div>
            <div class="info">
              <slot name="info"></slot>
            </div>
          </div>
          <mushroom-shape-icon disabled="false" icon="mdi:timer-outline" slot="icon">
            <div class="shape">
              <ha-icon icon="mdi:timer-outline">…</ha-icon>
            </div>
          </mushroom-shape-icon>
          <div class="container" slot="info">
            <span class="primary">
              test1
            </span>
            <span class="default secondary">
              <div class="pointer text-content value">
                idle
              </div>
            </span>
          </div>
        </mushroom-state-item>
      </mushroom-card>
    </ha-card>
  </timer-bar-mushroom-row>
</timer-bar-card>
"
`;

exports[`Basic mushroom: paused 1`] = `
"<timer-bar-card hass="[object Object]">
  <timer-bar-mushroom-row config="[object Object]" hass="[object Object]" mushroom="true">
    <ha-card raised="false">
      <slot></slot>
      <mushroom-card appearance="[object Object]">
        <div class="container">
          <slot></slot>
        </div>
        <mushroom-state-item appearance="[object Object]">
          <div class="container">
            <div class="icon">
              <slot name="icon"></slot>
              <slot name="badge"></slot>
            </div>
            <div class="info">
              <slot name="info"></slot>
            </div>
          </div>
          <mushroom-shape-icon disabled="false" icon="mdi:timer-outline" slot="icon">
            <div class="shape">
              <ha-icon icon="mdi:timer-outline">…</ha-icon>
            </div>
          </mushroom-shape-icon>
          <div class="container" slot="info">
            <span class="primary">
              test1
            </span>
            <span class="default secondary">
              <div class="pointer status">
                paused
              </div>
              <div class="pointer text-content value">
                58
              </div>
            </span>
          </div>
        </mushroom-state-item>
      </mushroom-card>
    </ha-card>
  </timer-bar-mushroom-row>
</timer-bar-card>
"
`;

exports[`Basic mushroom: running 1`] = `
"<timer-bar-card hass="[object Object]">
  <timer-bar-mushroom-row config="[object Object]" hass="[object Object]" mushroom="true">
    <ha-card raised="false">
      <slot></slot>
      <mushroom-card appearance="[object Object]">
        <div class="container">
          <slot></slot>
        </div>
        <mushroom-state-item appearance="[object Object]">
          <div class="container">
            <div class="icon">
              <slot name="icon"></slot>
              <slot name="badge"></slot>
            </div>
            <div class="info">
              <slot name="info"></slot>
            </div>
          </div>
          <mushroom-shape-icon disabled="false" icon="mdi:timer-outline" slot="icon">
            <div class="shape">
              <ha-icon icon="mdi:timer-outline">…</ha-icon>
            </div>
          </mushroom-shape-icon>
          <div class="container" slot="info">
            <span class="primary">
              test1
            </span>
            <span class="default secondary">
              <div class="bar-container pointer">
                <div class="bar">
                  <div></div>
                </div>
              </div>
              <div class="pointer text-content value">
                59
              </div>
            </span>
          </div>
        </mushroom-state-item>
      </mushroom-card>
    </ha-card>
  </timer-bar-mushroom-row>
</timer-bar-card>
"
`;

exports[`Mushroom customization: infos 1`] = `
"<hui-grid-card _cards="[object HTMLElement],[object HTMLElement]" editMode="false">
  <div id="root">
    <timer-bar-card hass="[object Object]">
      <timer-bar-mushroom-row config="[object Object]" hass="[object Object]" mushroom="[object Object]">
        <ha-card raised="false">
          <slot></slot>
          <mushroom-card appearance="[object Object]">
            <div class="container">
              <slot></slot>
            </div>
            <mushroom-state-item appearance="[object Object]">
              <div class="container">
                <div class="icon">
                  <slot name="icon"></slot>
                  <slot name="badge"></slot>
                </div>
                <div class="info">
                  <slot name="info"></slot>
                </div>
              </div>
              <mushroom-shape-icon disabled="false" icon="mdi:timer-outline" slot="icon">
                <div class="shape">
                  <ha-icon icon="mdi:timer-outline">…</ha-icon>
                </div>
              </mushroom-shape-icon>
              <div class="container" slot="info">
                <span class="primary">
                  idle
                </span>
                <span class="default secondary">
                  <div class="pointer text-content value"></div>
                </span>
              </div>
            </mushroom-state-item>
          </mushroom-card>
        </ha-card>
      </timer-bar-mushroom-row>
    </timer-bar-card>
    <timer-bar-card hass="[object Object]">
      <timer-bar-mushroom-row config="[object Object]" hass="[object Object]" mushroom="[object Object]">
        <ha-card raised="false">
          <slot></slot>
          <mushroom-card appearance="[object Object]">
            <div class="container no-icon">
              <slot></slot>
            </div>
            <mushroom-state-item appearance="[object Object]">
              <div class="container">
                <div class="info">
                  <slot name="info"></slot>
                </div>
              </div>
              <mushroom-shape-icon disabled="false" icon="mdi:timer-outline" slot="icon">
                <div class="shape">
                  <ha-icon icon="mdi:timer-outline">…</ha-icon>
                </div>
              </mushroom-shape-icon>
              <div class="container" slot="info">
                <span class="primary">
                  No icon
                </span>
                <span class="default secondary">
                  <div class="pointer text-content value">
                    idle
                  </div>
                </span>
              </div>
            </mushroom-state-item>
          </mushroom-card>
        </ha-card>
      </timer-bar-mushroom-row>
    </timer-bar-card>
  </div>
</hui-grid-card>
"
`;

exports[`Vertical mushroom: idle 1`] = `
"<timer-bar-card hass="[object Object]">
  <timer-bar-mushroom-row config="[object Object]" hass="[object Object]" mushroom="[object Object]">
    <ha-card raised="false">
      <slot></slot>
      <mushroom-card appearance="[object Object]">
        <div class="container">
          <slot></slot>
        </div>
        <mushroom-state-item appearance="[object Object]">
          <div class="container vertical">
            <div class="icon">
              <slot name="icon"></slot>
              <slot name="badge"></slot>
            </div>
            <div class="info">
              <slot name="info"></slot>
            </div>
          </div>
          <mushroom-shape-icon disabled="false" icon="mdi:timer-outline" slot="icon">
            <div class="shape">
              <ha-icon icon="mdi:timer-outline">…</ha-icon>
            </div>
          </mushroom-shape-icon>
          <div class="container" slot="info">
            <span class="primary">
              test2
            </span>
            <span class="secondary vertical">
              <div class="pointer text-content value">
                idle
              </div>
            </span>
          </div>
        </mushroom-state-item>
      </mushroom-card>
    </ha-card>
  </timer-bar-mushroom-row>
</timer-bar-card>
"
`;

exports[`Vertical mushroom: paused 1`] = `
"<timer-bar-card hass="[object Object]">
  <timer-bar-mushroom-row config="[object Object]" hass="[object Object]" mushroom="[object Object]">
    <ha-card raised="false">
      <slot></slot>
      <mushroom-card appearance="[object Object]">
        <div class="container">
          <slot></slot>
        </div>
        <mushroom-state-item appearance="[object Object]">
          <div class="container vertical">
            <div class="icon">
              <slot name="icon"></slot>
              <slot name="badge"></slot>
            </div>
            <div class="info">
              <slot name="info"></slot>
            </div>
          </div>
          <mushroom-shape-icon disabled="false" icon="mdi:timer-outline" slot="icon">
            <div class="shape">
              <ha-icon icon="mdi:timer-outline">…</ha-icon>
            </div>
          </mushroom-shape-icon>
          <div class="container" slot="info">
            <span class="primary">
              test2
            </span>
            <span class="secondary vertical">
              <div class="pointer status">
                paused
              </div>
              <div class="pointer text-content value">
                1:58
              </div>
            </span>
          </div>
        </mushroom-state-item>
      </mushroom-card>
    </ha-card>
  </timer-bar-mushroom-row>
</timer-bar-card>
"
`;

exports[`Vertical mushroom: running 1`] = `
"<timer-bar-card hass="[object Object]">
  <timer-bar-mushroom-row config="[object Object]" hass="[object Object]" mushroom="[object Object]">
    <ha-card raised="false">
      <slot></slot>
      <mushroom-card appearance="[object Object]">
        <div class="container">
          <slot></slot>
        </div>
        <mushroom-state-item appearance="[object Object]">
          <div class="container vertical">
            <div class="icon">
              <slot name="icon"></slot>
              <slot name="badge"></slot>
            </div>
            <div class="info">
              <slot name="info"></slot>
            </div>
          </div>
          <mushroom-shape-icon disabled="false" icon="mdi:timer-outline" slot="icon">
            <div class="shape">
              <ha-icon icon="mdi:timer-outline">…</ha-icon>
            </div>
          </mushroom-shape-icon>
          <div class="container" slot="info">
            <span class="primary">
              test2
            </span>
            <span class="secondary vertical">
              <div class="bar-container pointer">
                <div class="bar">
                  <div></div>
                </div>
              </div>
              <div class="pointer text-content value">
                1:59
              </div>
            </span>
          </div>
        </mushroom-state-item>
      </mushroom-card>
    </ha-card>
  </timer-bar-mushroom-row>
</timer-bar-card>
"
`;
